After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 668385 - Missing G_END_DECLS in cogl-poll.h
Missing G_END_DECLS in cogl-poll.h
Status: RESOLVED FIXED
Product: cogl
Classification: Platform
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: Cogl maintainer(s)
Cogl maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-01-20 23:51 UTC by Tobias Hansen
Modified: 2012-01-24 14:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Tobias Hansen 2012-01-20 23:51:54 UTC
Hi,

see summary. This causes compile errrors if cogl/cogl.h is included.

Best regards,
Tobias
Comment 1 Neil Roberts 2012-01-24 14:06:40 UTC
Oh, good catch, thank you. I've pushed this patch:

http://git.gnome.org/browse/cogl/commit/?id=5936bfb3958f