cogl-poll: Add a missing G_END_DECLS to the header

I accidentally left this out so I guess that would break apps using
C++.

https://bugzilla.gnome.org/show_bug.cgi?id=668385